# cipher

./: .gitignore  .tmp-frontend-test-output.txt  QUICKSTART.md  azure-pipelines-static-web-app.yml  deploy.sh  docker-compose.yml  usage.json  usage_all.json
backend/: .env.example  Dockerfile  debug_doc_intelligence.py  debug_render_rects.py  debug_suggestions.py  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh  test_matrix_api.py  test_redaction_output.py  verify_matrix_fix.py
backend/app/: auth.py  config.py  main.py
backend/app/agent/: knowledge_base.py
backend/app/agent/tools/: __init__.py  search.py  suggestions.py  workspace.py
backend/app/containers/: __init__.py  app.py  clients.py  services.py
backend/app/models/: __init__.py  streaming.py  workspace.py
backend/app/pdf/: processor.py
backend/app/pipeline/: fuzzy_matcher.py  openai_client.py  orchestrator.py  page_processor.py
backend/app/routes/: agent.py  jobs.py  redactions.py  workspaces.py
backend/app/services/: __init__.py  agent_service.py  job_service.py  redaction_service.py  rule_engine.py  session_service.py  workspace_service.py
backend/app/storage/: blob.py
backend/src/redactor/: auth.py  config.py  main.py  models.py
backend/src/redactor/agent/: agent_loop.py  orchestrator.py  tools.py  (+2 more)
backend/tests/: conftest.py  test_agent_route.py  test_agent_service.py  test_agent_tools.py  test_auth.py  test_blob_service.py  test_config.py  test_containers_app.py  test_containers_clients.py  test_containers_services.py  test_cosmos_init.py  test_doc_intelligence.py  test_fuzzy_matcher.py  test_job_model.py  test_job_service.py  test_main_lifespan.py  test_openai_client.py  test_orchestrator.py  test_pdf_processor.py  test_pii_service.py  test_redaction_service.py  test_routes_agent_service.py  test_routes_jobs.py  test_routes_jobs_service.py  test_routes_redactions.py  test_routes_redactions_service.py  test_routes_workspaces.py  test_rule_engine.py  test_session_service.py  test_storage.py  test_streaming_integration.py  test_streaming_processor.py  test_workspace_models.py  test_workspace_service.py
backend/tests/agent/: test_agent_integration.py  test_agent_loop.py  test_knowledge_base.py  test_search_tool.py  test_suggestion_tools.py  test_tools_base.py  test_tools_registry.py  test_workspace_tools.py
(+149 files in other folders)
