[tool.poetry]
name = "redactor-backend"
version = "0.1.0"
description = "AI Document Redaction Backend"
packages = [{ include = "redactor", from = "src" }]
authors = ["AI Redaction Team"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.0, <1.0"
uvicorn = { extras = ["standard"], version = ">=0.30.0" }
python-multipart = ">=0.0.9"
pydantic-settings = ">=2.0.0"
pypdfium2 = ">=4.30.0"
azure-ai-documentintelligence = ">=1.0.2, <2.0"
azure-ai-textanalytics = ">=5.3.0, <6.0"
azure-storage-blob = ">=12.20.0, <13.0"
azure-identity = ">=1.17.0, <2.0"
openai = ">=1.102.0, <2.0"
# TODO: add agent-framework when package name confirmed
# NOTE: fuzzywuzzy and levenshtein replaced by rapidfuzz (modern drop-in replacement).
# Downstream code must change: `from fuzzywuzzy import fuzz` -> `from rapidfuzz import fuzz`
rapidfuzz = ">=3.0.0, <4.0"
python-dotenv = ">=1.1.0"
sse-starlette = ">=2.1.0, <3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23.0"
pytest-mock = ">=3.12.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
